@@ -448,6 +448,15 @@ win_room = 5
 ; Number of ticks to wait before a loose floor falls. (default = 11)
 loose_floor_delay = 11
 
+; Game speed when not fighting (delay between frames in 1/60 seconds). Smaller is faster. (default = 5)
+base_speed = 5
+
+; Game speed when fighting (delay between frames in 1/60 seconds). Smaller is faster. (default = 6)
+fight_speed = 6
+
+; Chomper speed (length of the animation cycle in frames). Smaller is faster. (default = 15)
+chomper_speed = 15
+
 
 ; The following customization options can be used in all level sections:
 ; level_type = 0: dungeon, 1: palace
